Competency3/.metadata/.plugins/org.eclipse.cdt.ui/competency no4.build.log
04:22:39 **** Incremental Build of configuration Debug for project competency no4 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'Count':
../Core/Src/main.c:287:3: error: 'ptr' undeclared (first use in this function)
  287 |  *ptr = HAL_ADC_GetValue(&hadc1);
      |   ^~~
../Core/Src/main.c:287:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

04:22:40 Build Failed. 2 errors, 0 warnings. (took 298ms)

